--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 set-option -g status-position top
+set-option -g renumber-windows on
 
 bind-key c new-window -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
