--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,3 +30,8 @@ bind-key c new-window -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 
+bind-key h resize-pane -L 5
+bind-key l resize-pane -R 5
+bind-key k resize-pane -U 5
+bind-key j resize-pane -D 5
+
